[package]
name = "siren-types"
description = "Types for the siren mediatype."
categories = ["web-programming"]
keywords = ["siren", "mediatype", "rest", "http"]
version = "0.1.0"
authors = [ "CoBloX developers <team@coblox.tech>" ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
derivative = "1"
http = "0.1"
readonly = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
spectral = "0.6.0"
